--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "test": "npx jest"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.6.0",
-    "babel-preset-env": "^1.7.0",
-    "jest": "^29.7.0"
+    "@babel/core": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
+    "babel-jest": "^29.0.0",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.14"
   }
 }
