--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "scripts": {
-    "test": "npx jest"
+    "test": "jest",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.4",
-    "@babel/preset-env": "^7.27.2",
-    "@babel/preset-typescript": "^7.27.1",
-    "babel-jest": "^29.0.0",
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.14"
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.8.3"
   }
 }
